# onboarding-verified-timetable-schedule-matcher

./: Cargo.toml
src/: main.rs  model.rs  schedule.rs
