[package]
name = "onboarding-verified-timetable-schedule-matcher"
version = "0.1.0"
authors = ["keliphy <developejimin@naver.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.79"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
wither = "0.9.0"
actix-web = "4.2.1"
lingua = { version = "1.4.0", default-features = false, features = ["korean", "english", "japanese"] }

redis = { version = "0.22.1", features = ["tokio-comp"] }